--- a/package.json
+++ b/package.json
@@ -1,9 +1,12 @@
 {
-  "name": "@ijavad/datepiker",
+  "name": "@ijavad805/datepiker",
   "version": "0.0.0",
-  "description": "cool date picker for shamsi",
+  "description": "cool date picker for miladi and shamsi",
   "scripts": {
-    "rollup": "rollup -c"
+    "rollup": "rollup -c",
+    "test": "jest",
+    "storybook": "start-storybook -p 6006",
+    "build-storybook": "build-storybook"
   },
   "repository": {
     "type": "git",
@@ -14,21 +17,39 @@
     "react",
     "jalali"
   ],
-  "author": "javad kazemzadeh",
+  "author": "Javad kazemzadeh",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/ijavad805/datepiker/issues"
   },
   "homepage": "https://github.com/ijavad805/datepiker#readme",
   "devDependencies": {
+    "@babel/core": "^7.18.10",
     "@rollup/plugin-commonjs": "^22.0.2",
     "@rollup/plugin-node-resolve": "^13.3.0",
     "@rollup/plugin-typescript": "^8.3.4",
+    "@storybook/addon-actions": "^6.5.10",
+    "@storybook/addon-essentials": "^6.5.10",
+    "@storybook/addon-interactions": "^6.5.10",
+    "@storybook/addon-links": "^6.5.10",
+    "@storybook/builder-webpack5": "^6.5.10",
+    "@storybook/manager-webpack5": "^6.5.10",
+    "@storybook/preset-scss": "^1.0.3",
+    "@storybook/react": "^6.5.10",
+    "@storybook/testing-library": "^0.0.13",
     "@types/react": "^18.0.17",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "babel-loader": "^8.2.5",
+    "css-loader": "^6.7.1",
+    "identity-obj-proxy": "^3.0.0",
     "rollup": "^2.78.1",
     "rollup-plugin-dts": "^4.2.2",
+    "rollup-plugin-peer-deps-external": "^2.2.4",
+    "rollup-plugin-postcss": "^4.0.2",
+    "rollup-plugin-terser": "^7.0.2",
+    "sass": "^1.54.4",
+    "sass-loader": "^13.0.2",
+    "style-loader": "^3.3.1",
+    "tslib": "^2.4.0",
     "typescript": "^4.7.4"
   },
   "main": "dist/cjs/index.js",
@@ -37,7 +58,18 @@
     "dist"
   ],
   "types": "dist/index.d.ts",
+  "peerDependencies": {
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
+  },
   "dependencies": {
-    "tslib": "^2.4.0"
+    "jalali-moment": "^3.3.11",
+    "moment": "^2.29.4",
+    "moment-jalaali": "^0.9.6",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
+  },
+  "publishConfig": {
+    "registry": "https://npm.pkg.github.com/ijavad805"
   }
 }
