--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ijavad805/datepiker",
-  "version": "0.0.0",
+  "version": "0.0.3",
   "description": "cool date picker for miladi and shamsi",
   "scripts": {
     "rollup": "rollup -c",
@@ -66,10 +66,11 @@
     "jalali-moment": "^3.3.11",
     "moment": "^2.29.4",
     "moment-jalaali": "^0.9.6",
+    "postcss": "^8.4.16",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
   "publishConfig": {
-    "registry": "https://npm.pkg.github.com/ijavad805"
+    "registry": "https://pkgs.dev.azure.com/ijavad805/_packaging/REACT/npm/registry/"
   }
 }
