--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ijavad805/react-datepicker",
-  "version": "0.0.6",
+  "version": "0.0.7",
   "description": "cool date picker for English and Persian",
   "scripts": {
     "rollup": "rollup -c",
@@ -56,7 +56,8 @@
     "sass-loader": "^13.0.2",
     "style-loader": "^3.3.1",
     "tslib": "^2.4.0",
-    "typescript": "^4.7.4"
+    "typescript": "^4.7.4",
+    "postcss": "^8.4.16"
   },
   "main": "dist/cjs/index.js",
   "module": "dist/esm/index.js",
@@ -65,16 +66,12 @@
   ],
   "types": "dist/index.d.ts",
   "peerDependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react": "^17.0.0 || ^18.2.0",
+    "react-dom": "^17.0.0 || ^18.2.0"
   },
   "dependencies": {
     "jalali-moment": "^3.3.11",
-    "moment": "^2.29.4",
-    "moment-jalaali": "^0.9.6",
-    "postcss": "^8.4.16",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "moment": "^2.29.4"
   },
   "publishConfig": {
     "registry": "https://npm.pkg.github.com/ijavad805"
