--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ijavad805/react-datepicker",
-  "version": "0.0.7",
+  "version": "0.0.8",
   "description": "cool date picker for English and Persian",
   "scripts": {
     "rollup": "rollup -c",
@@ -8,9 +8,10 @@
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook"
   },
+  "private": false,
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/ijavad805/datepiker.git"
+    "url": "git+https://github.com/ijavad805/react-datepicker.git"
   },
   "keywords": [
     "datepicker",
@@ -26,9 +27,9 @@
   "author": "Javad kazemzadeh",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/ijavad805/datepiker/issues"
+    "url": "https://github.com/ijavad805/react-datepicker/issues"
   },
-  "homepage": "https://github.com/ijavad805/datepiker#readme",
+  "homepage": "https://github.com/ijavad805/react-datepicker#readme",
   "devDependencies": {
     "@babel/core": "^7.18.10",
     "@rollup/plugin-commonjs": "^22.0.2",
@@ -57,7 +58,9 @@
     "style-loader": "^3.3.1",
     "tslib": "^2.4.0",
     "typescript": "^4.7.4",
-    "postcss": "^8.4.16"
+    "postcss": "^8.4.16",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "main": "dist/cjs/index.js",
   "module": "dist/esm/index.js",
@@ -72,8 +75,5 @@
   "dependencies": {
     "jalali-moment": "^3.3.11",
     "moment": "^2.29.4"
-  },
-  "publishConfig": {
-    "registry": "https://npm.pkg.github.com/ijavad805"
   }
 }
