--- a/package.json
+++ b/package.json
@@ -69,8 +69,8 @@
   ],
   "types": "dist/index.d.ts",
   "peerDependencies": {
-    "react": "^17.0.0 || ^18.2.0",
-    "react-dom": "^17.0.0 || ^18.2.0"
+    "react": ">=16.9.0",
+    "react-dom": ">=16.9.0"
   },
   "dependencies": {
     "jalali-moment": "^3.3.11",
