publish storybook version 1.1.10

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "rollup": "rollup -c",
     "test": "jest",
     "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook"
+    "build-storybook": "build-storybook -o ./docs"
   },
   "private": false,
   "repository": {
