--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ijavad805/react-datepicker",
-  "version": "1.1.11",
+  "version": "1.1.13",
   "description": "cool date picker for English and Persian",
   "scripts": {
     "rollup": "rollup -c",
@@ -45,9 +45,13 @@
     "@storybook/react": "^6.5.10",
     "@storybook/testing-library": "^0.0.13",
     "@types/react": "^18.0.17",
+    "antd": "^4.23.0",
     "babel-loader": "^8.2.5",
     "css-loader": "^6.7.1",
     "identity-obj-proxy": "^3.0.0",
+    "postcss": "^8.4.16",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "rollup": "^2.78.1",
     "rollup-plugin-dts": "^4.2.2",
     "rollup-plugin-peer-deps-external": "^2.2.4",
@@ -57,10 +61,7 @@
     "sass-loader": "^13.0.2",
     "style-loader": "^3.3.1",
     "tslib": "^2.4.0",
-    "typescript": "^4.7.4",
-    "postcss": "^8.4.16",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "typescript": "^4.7.4"
   },
   "main": "dist/cjs/index.js",
   "module": "dist/esm/index.js",
