--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@ijavad805/react-datepicker",
-  "version": "1.2.2",
-  "description": "cool date picker for English and Persian",
+  "version": "2.0.0",
+  "description": "cool date picker and calendar for English and Persian",
   "scripts": {
     "rollup": "rollup -c",
     "test": "jest",
