write test cases

--- a/package.json
+++ b/package.json
@@ -44,6 +44,8 @@
     "@storybook/preset-scss": "^1.0.3",
     "@storybook/react": "^6.5.10",
     "@storybook/testing-library": "^0.0.13",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^13.4.0",
     "@types/react": "^18.0.17",
     "antd": "^4.23.0",
     "babel-loader": "^8.2.5",
