--- a/package.json
+++ b/package.json
@@ -63,7 +63,8 @@
     "sass-loader": "^13.0.2",
     "style-loader": "^3.3.1",
     "tslib": "^2.4.0",
-    "typescript": "^4.7.4"
+    "typescript": "^4.7.4",
+    "jest-environment-jsdom": "^29.3.1"
   },
   "main": "dist/cjs/index.js",
   "module": "dist/esm/index.js",
