fix a bug in calendar

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ijavad805/react-datepicker",
-  "version": "2.1.18",
+  "version": "2.1.19",
   "description": "cool datepicker and calendar for English and Persian",
   "scripts": {
     "rollup": "rollup -c",
@@ -36,6 +36,7 @@
   "devDependencies": {
     "@babel/core": "^7.18.10",
     "@rollup/plugin-commonjs": "^22.0.2",
+    "@rollup/plugin-image": "^3.0.3",
     "@rollup/plugin-node-resolve": "^13.3.0",
     "@rollup/plugin-typescript": "^8.3.4",
     "@storybook/addon-actions": "^6.5.10",
@@ -54,6 +55,7 @@
     "babel-loader": "^8.2.5",
     "css-loader": "^6.7.1",
     "identity-obj-proxy": "^3.0.0",
+    "jest-environment-jsdom": "^29.3.1",
     "postcss": "^8.4.16",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -66,8 +68,7 @@
     "sass-loader": "^13.0.2",
     "style-loader": "^3.3.1",
     "tslib": "^2.4.0",
-    "typescript": "^4.7.4",
-    "jest-environment-jsdom": "^29.3.1"
+    "typescript": "^4.7.4"
   },
   "main": "dist/cjs/index.js",
   "module": "dist/esm/index.js",
