--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "cool datepicker and calendar for English and Persian",
   "scripts": {
     "rollup": "rollup -c",
-    "test": "jest",
+    "test": "jest --watch",
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook -o ./docs"
   },
