--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "cool datepicker and calendar for English and Persian",
   "scripts": {
     "rollup": "rollup -c",
-    "test": "jest",
+    "test": "jest --watch",
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook -o ./docs"
   },
@@ -50,11 +50,14 @@
     "@storybook/testing-library": "^0.0.13",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
+    "@types/jest": "^29.5.7",
+    "@types/mocha": "^10.0.3",
     "@types/react": "^18.0.17",
     "antd": "^4.23.0",
     "babel-loader": "^8.2.5",
     "css-loader": "^6.7.1",
     "identity-obj-proxy": "^3.0.0",
+    "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.3.1",
     "postcss": "^8.4.16",
     "react": "^18.2.0",
@@ -67,6 +70,7 @@
     "sass": "^1.54.4",
     "sass-loader": "^13.0.2",
     "style-loader": "^3.3.1",
+    "ts-jest": "^29.1.1",
     "tslib": "^2.4.0",
     "typescript": "^4.7.4"
   },
