--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "name": "@ijavad805/react-datepicker",
-  "version": "2.2.6",
+  "version": "2.2.7",
   "description": "cool datepicker and calendar for English and Persian",
   "scripts": {
     "rollup": "rollup -c",
     "test": "npx jest --watch",
     "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook -o ./docs"
+    "build-storybook": "build-storybook -o ./docs",
+    "prepublish": "npm run rollup"
   },
   "private": false,
   "repository": {
