--- a/package.json
+++ b/package.json
@@ -74,5 +74,13 @@
   "dependencies": {
     "jalali-moment": "^3.3.11",
     "moment": "^2.29.4"
+  },
+  "exports": {
+    ".": {
+      "types": "./dist/index.d.ts",
+      "import": "./dist/esm/index.js",
+      "require": "./dist/cjs/index.js"
+    },
+    "./package.json": "./package.json"
   }
 }
