add new doc tools

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "rollup": "rollup -c",
     "test": "npx jest --watch",
-    "docs:start": "docusaurus start",
+    "docs:start": "npm --pre documents start",
     "docs:build": "docusaurus build",
     "docs:deploy": "docusaurus deploy",
     "docs:swizzle": "docusaurus swizzle",
@@ -45,9 +45,6 @@
     "@rollup/plugin-image": "^3.0.3",
     "@rollup/plugin-node-resolve": "^13.3.0",
     "@rollup/plugin-typescript": "^8.3.4",
-    "@docusaurus/core": "^3.3.2",
-    "@docusaurus/module-type-aliases": "^3.3.2",
-    "@docusaurus/preset-classic": "^3.3.2",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^16.3.0",
     "@types/react": "^18.0.17",
