Add interactive playground to docs

--- a/documents/package.json
+++ b/documents/package.json
@@ -18,6 +18,8 @@
     "@docusaurus/preset-classic": "3.9.2",
     "@mdx-js/react": "^3.0.0",
     "clsx": "^2.0.0",
+    "jalali-moment": "^3.3.11",
+    "moment": "^2.29.4",
     "prism-react-renderer": "^2.3.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
